added java opts