@@ -20,6 +20,7 @@ USER $APPLICATION_USER
 EXPOSE 23513/tcp
 
 COPY --from=build /build/build/libs/tyler-fat.jar /app/tyler-fat.jar
+COPY --from=build /scripts/start.sh /app/start.sh
 WORKDIR /app
 
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "tyler-fat.jar"]
+ENTRYPOINT ./start.sh
